welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:2: error: type mismatch;
 found   : Boolean(true)
 required: Int
	return true;
               ^